update empty state designs

--- a/assets/styles/themes.css
+++ b/assets/styles/themes.css
@@ -37,6 +37,7 @@
   --color-bg-blue: #4565ff;
   --color-bg-teal: #0ea3a4;
   --color-bg-purple: #401c94;
+  --color-bg-light-purple-35: rgba(173, 153, 216, 0.35);
 
   --color-text-accent-1: #cdc5df;
   --color-text-accent-2: #cdc5df;
@@ -123,6 +124,7 @@
   --color-bg-blue: #4565ff;
   --color-bg-teal: #0ea3a4;
   --color-bg-purple: #4c249f;
+  --color-bg-light-purple-35: rgba(173, 153, 216, 0.35);
 
   --color-text-accent-1: #a5a0b3;
   --color-text-accent-2: #4c249f;
