--- a/assets/styles/themes.css
+++ b/assets/styles/themes.css
@@ -96,7 +96,7 @@
   --color-bg-card-purple: #43286e;
   --color-bg-primary: #fff;
   --color-bg-secondary: #35f0d0;
-  --color-bg-tertiary: rgba(163, 43, 187, 0.4);
+  --color-bg-tertiary: rgba(173, 153, 216, 0.1);
   --color-bg-default: #f7f7f7;
   --color-bg-darkened: #e9e9e9;
   --color-bg-input: #fff;
@@ -191,7 +191,7 @@
 }
 
 .theme-light .pool-gradient-1 {
-  background: linear-gradient(72deg, #eee6ff 28%, rgba(255, 185, 240, 0.9) 164%);
+  background: linear-gradient(72deg, #4c249f 28%, rgba(236, 71, 201, 1) 164%);
 }
 
 @screen sm {
