--- a/assets/styles/reach--custom.css
+++ b/assets/styles/reach--custom.css
@@ -18,6 +18,7 @@
   animation: slide-down 0.2s ease;
 }
 
+
 /* TOOLTIPS / PTHINTS */
 .device-is-touch [data-reach-tooltip] {
   top: 154px !important;
@@ -32,8 +33,8 @@
 
 [data-reach-tooltip] {
   @apply text-inverse bg-primary rounded-lg;
-  box-shadow: 0 -10px 10px -1px rgba(0, 0, 0, 0.1), 0 20px 20px -3px rgba(0, 0, 0, 0.1),
-    rgba(14, 16, 40, 0.2) 0px 15px 30px;
+  box-shadow: 0 -10px 10px -1px rgba(0, 0, 0, .1),
+    0 20px 20px -3px rgba(0, 0, 0, .1), rgba(14, 16, 40, 0.2) 0px 15px 30px;
   border: 0;
   max-width: 30rem;
   padding: 1.25rem 2rem;
@@ -86,7 +87,7 @@
 
 [data-reach-menu-list],
 [data-reach-menu-items] {
-  @apply py-0 text-xxxs xs:text-sm sm:text-lg lg:text-xl rounded-lg shadow-lg;
+  @apply py-0 text-xxs xs:text-sm rounded-lg shadow-lg;
 }
 
 .theme-dark [data-reach-menu-list],
@@ -113,7 +114,7 @@
 @screen sm {
   [data-reach-menu-item] {
     @apply px-5 py-3;
-  }
+  } 
 }
 
 .theme-dark [data-reach-menu-item].selected {
@@ -174,6 +175,7 @@
   pointer-events: initial;
 }
 
+
 @screen sm {
   [data-reach-dialog-content] {
     background: transparent;
@@ -203,3 +205,4 @@
     max-width: 56rem;
   }
 }
+
