* mainly cosmetic changes but also fix a bug when pressing enter/return while filling out a contract address in action

--- a/assets/styles/themes.css
+++ b/assets/styles/themes.css
@@ -219,13 +219,13 @@ input:-webkit-autofill:active {
 .theme-light ::placeholder,
 .theme-light .input::placeholder,
 .theme-light .textarea::placeholder {
-  color: #ded4f2;
+  color: #c8bce0;
 }
 
 .theme-dark ::placeholder,
 .theme-dark .input::placeholder,
 .theme-dark .textarea::placeholder {
-  color: #392781;
+  color: #5d2d9b;
 }
 
 .theme-dark .toggle {
