* cleanup some deps * bring over NavPoolBalance work from pool-app

--- a/assets/styles/themes.css
+++ b/assets/styles/themes.css
@@ -57,6 +57,7 @@
   --color-text-highlight-1: #1ef7d6;
   --color-text-highlight-2: #35f0d0;
   --color-text-highlight-3: #55f1d7;
+  --color-text-highlight-4: #55f1d7;
   --color-text-highlight-6: #ff46ed;
   --color-text-highlight-7: #c00c99;
   --color-text-highlight-9: #35f0d0;
@@ -145,6 +146,7 @@
   --color-text-highlight-1: #4c249f;
   --color-text-highlight-2: #7f51d1;
   --color-text-highlight-3: #3857ee;
+  --color-text-highlight-4: #fff;
   --color-text-highlight-6: #ff46ed;
   --color-text-highlight-7: #c00c99;
   --color-text-highlight-9: #35f0d0;
