--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -6,3 +6,13 @@
 .bg-transparent {
   background: transparent;
 }
+
+.gradient-new {
+  background-image: linear-gradient(
+    130deg,
+    rgba(76, 36, 159, 0.8) -10%,
+    rgba(23, 225, 253, 0.8) 40%,
+    rgba(255, 119, 225, 0.8) 70%,
+    rgba(255, 241, 119, 0.8) 120%
+  );
+}
