* moving tx code to hooks, utils, etc

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -16,3 +16,7 @@
     rgba(255, 241, 119, 0.8) 120%
   );
 }
+
+.new-btn .lds-dual-ring:after {
+  border-color: #6747a7 transparent #6747a7 transparent;
+}
