* switch to using rinkeby * remove console warns/errors * fix issues with tx refetching

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -18,5 +18,5 @@
 }
 
 .new-btn .lds-dual-ring:after {
-  border-color: #6747a7 transparent #6747a7 transparent;
+  border-color: #3f198b transparent #3f198b transparent;
 }
