--- a/lib/styles/navigation.css
+++ b/lib/styles/navigation.css
@@ -9,11 +9,7 @@
 }
 
 @media screen and (min-width: 931px) {
-  .theme-dark .nav-container {
-    background: linear-gradient(#2d0b5a00, #2d0b5a);
-  }
-
-  .theme-light .nav-container {
-    background: linear-gradient(#f7f7f700, #f7f7f7);
+  .nav-container {
+    width: fit-content;
   }
 }
