--- a/lib/styles/navigation.css
+++ b/lib/styles/navigation.css
@@ -1,15 +1,15 @@
 @media screen and (max-width: 931px) {
-  .theme-dark .nav-container {
+  .theme-dark .bg-nav-container {
     background: linear-gradient(#2d0b5a00, #2d0b5a);
   }
 
-  .theme-light .nav-container {
+  .theme-light .bg-nav-container {
     background: linear-gradient(#f7f7f700, #f7f7f7);
   }
 }
 
 @media screen and (min-width: 931px) {
-  .nav-container {
+  .bg-nav-container {
     width: fit-content;
   }
 }
