--- a/assets/styles/tsunami.css
+++ b/assets/styles/tsunami.css
@@ -99,38 +99,8 @@
   }
 }
 
-.upcoming-banner-animated {
-  border-radius: 10px;
-  border: 4px solid transparent;
-  width: 100%;
-  position: relative;
-}
-
-.upcoming-banner-animated:before {
-  background: rgba(28, 4, 84, 0.9) padding-box;
-  backdrop-filter: blur(2px);
-  border-radius: 10px;
-  border: 4px solid transparent;
-  width: 100%;
-  content: '';
-  position: absolute;
-  top: -4px;
-  left: -4px;
-  height: calc(100% + 8px);
-  width: calc(100% + 8px);
-  z-index: 0;
-}
-
-.upcoming-banner-animated:after {
-  @apply rounded-lg;
-  content: '';
-  position: absolute;
-  top: -4px;
-  left: -4px;
-  height: calc(100% + 8px);
-  width: calc(100% + 8px);
+.bg-animated-gradient-1 {
   background: linear-gradient(85deg, #f37055 -30%, #0dacf5, #f947d2, #11d1fc, #dd6ffe, #fedc6f 95%);
-  z-index: -1;
   animation: animatedgradient 8s ease alternate infinite;
   background-size: 300% 300%;
   animation-timing-function: steps(50);
