color the bar according to the amount inputted/odds, also transition the width, add margin to the bar, give more width to the chevron button

--- a/src/assets/styles/tsunami.css
+++ b/src/assets/styles/tsunami.css
@@ -70,3 +70,62 @@
     background-position: 0% 50%;
   }
 }
+
+.odds--progress-bar {
+  transition: width 0.75s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+
+.odds--progress-bar.rounded-l-full::before {
+  border-top-left-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
+
+.odds--progress-bar.rounded-full::before {
+  border-radius: 9999px;
+}
+
+/* https://stackoverflow.com/questions/63787241/css-how-to-create-an-infinitely-moving-repeating-linear-gradient */
+.seamless-gradient-wrapper {
+  --d: 900px;
+  --angle: 150deg;
+  --sin: 0.5; /* = sin(angle) */
+  --w: 100%;
+
+  position: relative;
+  z-index: 0;
+}
+
+.seamless-gradient-wrapper::before {
+  content: '';
+  height: 100%;
+  left: 0;
+  width: var(--w);
+  position: absolute;
+  z-index: -1;
+
+  background: repeating-linear-gradient(
+    var(--angle),
+    var(--color-pt-gradient-cyan),
+    var(--color-pt-gradient-magenta),
+    var(--color-pt-gradient-yellow),
+    var(--color-pt-gradient-magenta),
+    var(--color-pt-gradient-cyan) var(--d)
+  );
+
+  background-size: calc(var(--d) / var(--sin)) 100%;
+  animation: seamless-gradient-animation 3s linear infinite reverse;
+}
+
+@keyframes seamless-gradient-animation {
+  0% {
+    background-position: calc(var(--d) / var(--sin)) 0;
+  }
+}
+
+.odds--progress-bar.bg-pink {
+  background-color: #f667f2;
+}
+
+.odds--progress-bar.bg-blue {
+  background-color: #54defa;
+}
